<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">


    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="invisible"
        android:id="@+id/progress"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >
        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_login"
            android:textColor="#fff"
            android:background="@drawable/border"
            android:padding="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_register"
            android:textColor="#fff"
            android:background="@drawable/border"
            android:padding="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="280dp"
        android:id="@+id/lnrlyout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/user"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/txt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:textColorHint="#fff"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:textColor="#fff"
                    android:inputType="text"
                    android:digits="ABCDEFGHIJKLMNOPQRSCTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_-"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#5fff"></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/password"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/txt_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:textColorHint="#fff"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:inputType="textPassword"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:textColor="#fff"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#5fff"></LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>