<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_kiss">


    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="invisible"
        android:id="@+id/progress"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="220dp"
        android:id="@+id/lnrlyout"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/weight"
                    android:layout_gravity="center"
                    android:tint="@color/white"/>
                <EditText
                    android:id="@+id/txt_gewicht"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_gewicht"
                    android:textColorHint="#fff"
                    android:layout_marginLeft="35dp"
                    android:background="#00000000"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:textColor="#fff"
                    android:inputType="number"
                    android:digits="0123456789"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#5fff"></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/sex"
                    android:layout_gravity="center"
                    android:tint="@color/white"/>
                <AutoCompleteTextView
                    android:id="@+id/txt_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_geschlecht"
                    android:textColorHint="#fff"
                    android:layout_marginLeft="35dp"
                    android:background="#00000000"
                    android:inputType="text"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:textColor="#fff"
                    android:digits="abcdefghijklmnopqrstuvwxyzä"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#5fff"></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <Switch
                    android:id="@+id/switch_offline"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:trackTint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_offline_modus"
                    android:textColorHint="#fff"
                    android:layout_marginLeft="10dp"
                    android:background="#00000000"
                    android:inputType="text"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:textColor="#fff"
                    />
            </LinearLayout>
            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#5fff"></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <Switch
                    android:id="@+id/switch_englisch"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:trackTint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_englisch"
                    android:textColorHint="#fff"
                    android:layout_marginLeft="10dp"
                    android:background="#00000000"
                    android:inputType="text"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:textColor="#fff"
                    />
            </LinearLayout>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#5fff"></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/user"
                    android:layout_gravity="center"
                    android:tint="@color/white"/>
                <TextView
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_abmelden"
                    android:textColorHint="#fff"
                    android:layout_marginLeft="35dp"
                    android:background="#00000000"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:textColor="#fff"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#5fff"></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/user"
                    android:layout_gravity="center"
                    android:tint="@color/white"/>
                <TextView
                    android:id="@+id/btn_deleteAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_deleteAccount"
                    android:textColorHint="#fff"
                    android:layout_marginLeft="35dp"
                    android:background="#00000000"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:textColor="#fff"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#5fff"></LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#5fff"></LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >
        <TextView
            android:id="@+id/btn_speichern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_speichern"
            android:textColor="#fff"
            android:background="@drawable/border"
            android:padding="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            />
    </LinearLayout>


</RelativeLayout>